// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Footer /> Should render correctly 1`] = `
<div>
  <footer
    class="footer__container"
    id="footer"
  >
    <div
      class="logo__container footer__logo logo__container--centred logo__container--no-padding"
    >
      <a
        href="/"
      >
        <h1
          aria-label="Home page"
          class="logo__heading logo__heading--pride logo__heading--no-padding"
          role="button"
        >
          LOGO
        </h1>
      </a>
    </div>
    <div
      class="footer__tech"
    >
      <div
        class="typography__main typography--no-padding tech-specs__container"
      >
        Built in
        <a
          href="https://reactjs.org/"
          rel="noopener noreferrer"
          target="_blank"
        >
          <img
            alt="React"
            class="tech-specs__icon"
            height="5"
            src="IMAGE_MOCK"
            width="5"
          />
        </a>
        and
        <a
          href="https://redux.js.org/"
          rel="noopener noreferrer"
          target="_blank"
        >
          <img
            alt="Redux"
            class="tech-specs__icon"
            height="5"
            src="IMAGE_MOCK"
            width="5"
          />
        </a>
        Hosted on
        <a
          href="https://aws.amazon.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          <img
            alt="Amazon Web Services"
            class="tech-specs__icon"
            height="5"
            src="IMAGE_MOCK"
            style="margin-top: .8rem; max-width: 2.9rem;"
            width="8.28"
          />
        </a>
      </div>
    </div>
    <div
      class="footer-nav__container footer__nav"
    >
      <a
        class="typography__main typography__link typography__link--text-link typography--no-padding typography--light typography--light--text-link typography--inline footer-nav__link footer__nav"
        href="/sitemap"
      >
        Site map
      </a>
      <a
        class="typography__main typography__link typography__link--text-link typography--no-padding typography--light typography--light--text-link typography--inline footer-nav__link footer__nav"
        href="/status"
      >
        Status
      </a>
    </div>
  </footer>
</div>
`;

exports[`<Footer /> Should render correctly with custom className 1`] = `
<div>
  <footer
    class="footer__container test-custom-className"
    id="footer"
  >
    <div
      class="logo__container footer__logo logo__container--centred logo__container--no-padding"
    >
      <a
        href="/"
      >
        <h1
          aria-label="Home page"
          class="logo__heading logo__heading--pride logo__heading--no-padding"
          role="button"
        >
          LOGO
        </h1>
      </a>
    </div>
    <div
      class="footer__tech"
    >
      <div
        class="typography__main typography--no-padding tech-specs__container"
      >
        Built in
        <a
          href="https://reactjs.org/"
          rel="noopener noreferrer"
          target="_blank"
        >
          <img
            alt="React"
            class="tech-specs__icon"
            height="5"
            src="IMAGE_MOCK"
            width="5"
          />
        </a>
        and
        <a
          href="https://redux.js.org/"
          rel="noopener noreferrer"
          target="_blank"
        >
          <img
            alt="Redux"
            class="tech-specs__icon"
            height="5"
            src="IMAGE_MOCK"
            width="5"
          />
        </a>
        Hosted on
        <a
          href="https://aws.amazon.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          <img
            alt="Amazon Web Services"
            class="tech-specs__icon"
            height="5"
            src="IMAGE_MOCK"
            style="margin-top: .8rem; max-width: 2.9rem;"
            width="8.28"
          />
        </a>
      </div>
    </div>
    <div
      class="footer-nav__container footer__nav"
    >
      <a
        class="typography__main typography__link typography__link--text-link typography--no-padding typography--light typography--light--text-link typography--inline footer-nav__link footer__nav"
        href="/sitemap"
      >
        Site map
      </a>
      <a
        class="typography__main typography__link typography__link--text-link typography--no-padding typography--light typography--light--text-link typography--inline footer-nav__link footer__nav"
        href="/status"
      >
        Status
      </a>
    </div>
  </footer>
</div>
`;
